[tool.poetry]
name = "douzero"
version = "0.1.0"
description = ""
authors = ["Chufan Chen <allenplato28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
rlcard = "^1.1.0"

[tool.poetry.group.dev.dependencies]
GitPython = "^3.1.31"
gitdb = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
